Bug 785305 - Teach Reflect.parse about the strange parse node structure of defaulted formals that alias functions. r=jorendorff